# get_blessed_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: backend.rs  content_parser.rs  dependency_builder.rs  lib.rs  main.rs  scraper.rs  tui.rs  utils.rs  view.rs
src/backend/: backend.rs
src/content_parser/: content_parser.rs  jsoncontentparser.rs
src/scraper/: scraper.rs
src/tui/: handler.rs  tui.rs
src/view/: app.rs  crate_category.rs  ui.rs  view.rs  widgets.rs
