[package]
name = "get_blessed"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.4"
ratatui = { version = "0.26.2", features = ["all-widgets"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
anyhow = "1.0.83"
strum = "0.26.2"
strum_macros = "0.26"
fake = { version = "2.9.2", features = ["derive"] }
scraper = "0.19.0"
open = "5.1.3"
throbber-widgets-tui = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
rand = "0.8.5"
time = "0.3.36"
regex = "1.10.4"
fancy-regex = "0.13.0"
uuid = "1.8.0"
tempfile = "3.10.1"
flate2 = "1.0.30"
indexmap = "2.2.6"
arrayvec = "0.7.4"
smallvec = "1.13.2"
tinyvec = "1.6.0"
ureq = "2.9.7"
